# stock_agent

./: .gitignore  README.md  pyproject.toml  run.py  tore .
config/: config.toml
data/: portfolio.json
outputs/: 2026-01-25_sources.md
src/agent/: __init__.py  config.py  graph.py  llm_client.py  orchestrator.py  schemas.py
src/agent/multiagent/: __init__.py  agents.py  orchestrator.py  schema.py
src/analysis/: report.py  risk.py
src/llm/: client.py  schemas.py
src/llm/prompts/: daily_report.md
src/portfolio/: store.py
src/render/: render.py
src/render/templates/: daily_report.md.j2
src/tools/: compact_financials.py  financial_statement.py  indicators.py  market_data.py  news.py  portfolio.py  sec_filings.py
src/tools/outputs/: AAPL.json  AAPL_20260128T125306Z.json  AAPL_20260128T130217Z.json  aapl_compact.json  openbb_financials_AAPL_quarter_yfinance_income-balance-cash.json  sec_filings_AAPL_10_Q.json
tests/: test_market_data.py
